# esp-board-common

./: .gitmodules  CMakeLists.txt  Kconfig  TODO.md  idf_component.yml
apps/camera_capture/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig.defaults
apps/camera_capture/main/: CMakeLists.txt  capture_service.c  capture_service.h  capture_ui.h  capture_ui_dsi.c  main.c
apps/entropy_test/: CMakeLists.txt  Makefile  sdkconfig.defaults  sdkconfig.landscape
apps/entropy_test/main/: CMakeLists.txt  main.c
apps/qr_decoder/: CMakeLists.txt  README.md  sdkconfig.defaults
apps/qr_decoder/main/: main.c
apps/qr_decoder/test_qrs/: README.md  psbt_2of3_p2wsh_100in_normal_parts.txt
apps/scan_coord_test/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig.defaults
apps/scan_coord_test/main/: CMakeLists.txt  Kconfig.projbuild  (+2 more)
boards/waveshare_p4_lcd35/: board_config.h  sdkconfig.defaults
boards/waveshare_p4_lcd43/: board_config.h
components/board_log_flash/: CMakeLists.txt  Kconfig
docs/: camera-overlay-integration-test-design.md  dsi-landscape-simplification-plan.md  ppa-full-frame-rotation-plan.md  qr-scanning-performance-requirements.md
docs/knowledge/: camera-focus-procedure.md  csi-capture-task-streamoff-orphan.md  dsi-landscape-rendering-architecture.md  k-quirc-max-version-db-bound.md  lvgl-widget-feasibility-by-display-path.md  p4-lcd43-landscape-pipeline-optimization.md
src/: board.h  board_init.c  board_pipeline.c  board_pipeline_camera_csi.c  board_pipeline_display_lvgl.c  board_pipeline_display_lvgl.h  scan_coordinator.c  scan_coordinator.h
(+2 files in other folders)
